[API]: update to spring boot 3.3.0